@@ -10,8 +10,7 @@
 /*
   Removed the non-local variable `double ***w' and moved to R_alloc from
   Calloc.
-  No need for w_free() since the .C() calls will clear it.
-  The tests for whether the memory was allocated can be discarded as
+  The tests for whether the memory was allocated have been discarded as
   R_alloc will throw an error.
   The .C() will handle the vmaxget() and vmaxset().
  */
@@ -23,37 +22,14 @@ w_init(Sint m, Sint n)
     double ***w;
     
     w = (double ***) R_alloc(m + 1, sizeof(double **));
-    if(!w)
-	error("allocation error in w_init().");
     memset(w, '\0', (m+1) * sizeof(double**));
     for (i = 0; i <= m; i++) {
 	w[i] = (double**) R_alloc(n + 1, sizeof(double *));
-	if(!w[i])
-	    error("allocation error in w_init().");
 	memset(w[i], '\0', (n+1) * sizeof(double*));
     }
     return(w);
 }
 
-
-#if 0
-/* 
-  This is not needed if we use R_alloc() and let R garbage collect.
- */
-static void
-w_free(Sint m, Sint n, double ***w)
-{
-    Sint i, j;
-    for (i = m; i >= 0; i--) {
-	for (j = n; j >= 0; j--) {
-	    Free(w[i][j]);
-        }
-	Free(w[i]);
-    }
-    Free(w);
-    w = 0;
-}
-#endif 
 
 static double
 cansari(int k, int m, int n, double ***w)
@@ -68,8 +44,6 @@ cansari(int k, int m, int n, double ***w)
 
     if (w[m][n] == 0) {
 	w[m][n] = (double *) R_alloc(u + 1, sizeof(double));
-	if(!w[m][n])
-	    error("allocation error in cansari().");
 	memset(w[m][n], '\0', (u + 1) * sizeof(double));
 	for (i = 0; i <= u; i++)
 	    w[m][n][i] = -1;
@@ -109,7 +83,6 @@ dansari(Sint *len, double *x, Sint *m, Sint *n)
 	    x[i] = cansari((Sint)x[i], (Sint)*m, (Sint)*n, w)
 		/ choose(*m + *n, *m);
 	}
-    /* w_free(*m, *n, w); */
 }
 
 void
@@ -137,7 +110,6 @@ pansari(Sint *len, double *x, Sint *m, Sint *n)
 	    x[i] = p / c;
 	}
     }
-    /* w_free(*m, *n, w); */
 }
 
 void
@@ -171,5 +143,4 @@ qansari(Sint *len, double *x, Sint *m, Sint *n)
 	    x[i] = q;
 	}
     }
-    /* w_free(*m, *n, w); */
 }
