@@ -37,8 +37,6 @@ ckendall(int k, int n, double **w) {
 	return(0);
     if (w[n] == 0) {
 	w[n] = (double *) R_alloc(u + 1, sizeof(double));
-	if(!w[n])
-	    error("allocation error in ckendall().");
 	memset(w[n], '\0', sizeof(double) * (u+1));
 	for (i = 0; i <= u; i++)
 	    w[n][i] = -1;
@@ -63,8 +61,6 @@ dkendall(Sint *len, double *x, Sint *n) {
     double **w;
 
     w = (double **) R_alloc(*n + 1, sizeof(double *));
-    if (!w)
-	error("allocation error in dkendall().");
 
     for (i = 0; i < *len; i++)
 	if (fabs(x[i] - floor(x[i] + 0.5)) > 1e-7) {
@@ -82,8 +78,6 @@ pkendall(Sint *len, double *x, Sint *n) {
     double **w;
 
     w = (double **) R_alloc(*n + 1, sizeof(double *));
-    if(!w)
-	error("allocation error in pkendall().");
     memset(w, '\0', sizeof(double*) * (*n+1));
 
     for (i = 0; i < *len; i++) {
